--- a/tools/Dockerfile
+++ b/tools/Dockerfile
@@ -1,5 +1,7 @@
 FROM debian:stable-slim
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 #This is required fo bypassing the tzdata installation
 ENV TZ=Europe/Bucharest
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
@@ -16,10 +18,21 @@ RUN apt-get install -y pkg-config
 RUN apt-get install -y gcc-arm-linux-gnueabihf
 RUN apt-get install -y g++-8-arm-linux-gnueabihf
 
-#Install JRE
-RUN mkdir -p /usr/share/man/man1 /usr/share/man/man2
-RUN apt-get install -y --no-install-recommends openjdk-11-jre
+#Install JAVA
+RUN mkdir -p /usr/share/man/man1
+WORKDIR /opt
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        ca-certificates \
+        curl \
+    && curl \
+        -L \
+        -o openjdk.tar.gz \
+        https://download.java.net/java/GA/jdk11/13/GPL/openjdk-11.0.1_linux-x64_bin.tar.gz \
+    && mkdir jdk \
+    && tar zxf openjdk.tar.gz -C jdk --strip-components=1 \
+    && ln -sf /opt/jdk/bin/* /usr/local/bin/
 
 # clone react-native-webrtc repository
+WORKDIR /
 RUN git clone https://github.com/react-native-webrtc/react-native-webrtc.git
-
