--- a/tools/Dockerfile
+++ b/tools/Dockerfile
@@ -17,22 +17,18 @@ RUN apt-get install -y ninja-build
 RUN apt-get install -y pkg-config
 RUN apt-get install -y gcc-arm-linux-gnueabihf
 RUN apt-get install -y g++-8-arm-linux-gnueabihf
+RUN apt-get install -y ca-certificates 
 
 #Install JAVA
 RUN mkdir -p /usr/share/man/man1
 WORKDIR /opt
-RUN apt-get update \
-    && apt-get install -y --no-install-recommends \
-        ca-certificates \
-        curl \
-    && curl \
-        -L \
-        -o openjdk.tar.gz \
-        https://download.java.net/java/GA/jdk11/13/GPL/openjdk-11.0.1_linux-x64_bin.tar.gz \
-    && mkdir jdk \
-    && tar zxf openjdk.tar.gz -C jdk --strip-components=1 \
-    && ln -sf /opt/jdk/bin/* /usr/local/bin/
+RUN curl -L -o openjdk.tar.gz https://download.java.net/java/GA/jdk11/13/GPL/openjdk-11.0.1_linux-x64_bin.tar.gz
+RUN mkdir jdk
+RUN tar zxf openjdk.tar.gz -C jdk --strip-components=1
+RUN ln -sf /opt/jdk/bin/* /usr/local/bin/
 
 # clone react-native-webrtc repository
 WORKDIR /
 RUN git clone https://github.com/react-native-webrtc/react-native-webrtc.git
+WORKDIR /react-native-webrtc/tools
+RUN mkdir output
